@@ -5,12 +5,12 @@ Ext.ux.dd.GridReorderDropTarget = function(grid, config) {
         ,sortCol: 'menuindex'
         ,gridDropTarget: this
         ,notifyDrop: function(dd, e, data){
-            if (data.grid.config.baseParams.sort != this.sortCol) {
-                if (data.grid.store.sortInfo == undefined || data.grid.store.sortInfo.field != this.sortCol) {
+            if (data.grid.parseSortField(data.grid.config.baseParams.sort) != this.sortCol) {
+                if (data.grid.store.sortInfo == undefined || data.grid.parseSortField(data.grid.store.sortInfo.field) != this.sortCol) {
                     return false;
                 }
             } else {
-                if (data.grid.store.sortInfo != undefined && data.grid.store.sortInfo.field != this.sortCol) {
+                if (data.grid.store.sortInfo != undefined && data.grid.parseSortField(data.grid.store.sortInfo.field) != this.sortCol) {
                     return false;
                 }
             }
@@ -58,12 +58,12 @@ Ext.ux.dd.GridReorderDropTarget = function(grid, config) {
             this.grid.getView().dragZone.ddel.innerHTML = this.grid.getDragDropText();
             this.grid.getView().dragZone.proxy.update(this.grid.getView().dragZone.ddel);
 
-            if (data.grid.config.baseParams.sort != this.sortCol) {
-                if (data.grid.store.sortInfo == undefined || data.grid.store.sortInfo.field != this.sortCol) {
+            if (data.grid.parseSortField(data.grid.config.baseParams.sort) != this.sortCol) {
+                if (data.grid.store.sortInfo == undefined || data.grid.parseSortField(data.grid.store.sortInfo.field) != this.sortCol) {
                     return this.dropNotAllowed;
                 }
             } else {
-                if (data.grid.store.sortInfo != undefined && data.grid.store.sortInfo.field != this.sortCol) {
+                if (data.grid.store.sortInfo != undefined && data.grid.parseSortField(data.grid.store.sortInfo.field) != this.sortCol) {
                     return this.dropNotAllowed;
                 }
             }
